--- a/style.css
+++ b/style.css
@@ -43,3 +43,31 @@ footer {
 	width: 100%;
     
 }
+.card-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.card {
+	box-shadow: 0 0 5px rgba(0,0,0,0.3);
+	margin: 10px;
+	padding: 10px;
+	width: 300px;
+}
+
+.card img {
+	display: block;
+	margin: 0 auto;
+}
+
+.card h3 {
+	font-size: 1.5rem;
+	margin: 10px 0;
+}
+
+.card p {
+	font-size: 1rem;
+	line-height: 1.5;
+	margin: 10px 0;
+}
